# canorus

./: .gitignore  Cargo.toml  README.md  config.json  example.STEP  example.stl
.github/workflows/: ci.yml
src/: analysis.rs  backend.rs  lib.rs  license.rs  main.rs  math.rs  parser.rs  preprocess.rs  step.pest
