[package]
name = "canorus"
version = "0.1.0"
authors = ["Nakano Masaki <namachan10777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
pest = "2.1.2"
pest_derive = "2.1.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
